# cpp-task-10-02-

./: CMakeLists.txt  cmake_work_mane.cpp
