cmake_minimum_required(VERSION 3.23.0)
project(cmake_prodgekt)
add_executable( my_program cmake_work_mane.cpp Figure.cpp Figure.h isoscelesTriangle.cpp isoscelesTriangle.h Parallelogram.cpp Parallelogram.h Quadrilateral.cpp Quadrilateral.h "Rectangle.h" "Rectangle.cpp" Rhomb.cpp Rhomb.h rightTriangle.cpp rightTriangle.h Square.cpp Square.h Triangle.cpp Triangle.h "equilateralTriangle.h" "equilateralTriangle1.h")
